@@ -15,8 +15,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.util.ResourceUtils;
 
-/*import sun.misc.BASE64Encoder; java upgrade*/
-import java.util.Base64;
+import sun.misc.BASE64Encoder;
 
 /**
  * SAML assertion token generator
@@ -116,10 +115,7 @@ public class SamlAssertionTokenGenerator {
 
 		sig.verify(signatureBytes);
 
-		/* return new BASE64Encoder().encode(signatureBytes); java upgrade*/
-		
-		Base64.Encoder mimeEncoder = java.util.Base64.getMimeEncoder(); 
-		return mimeEncoder.encodeToString(signatureBytes);
+		return new BASE64Encoder().encode(signatureBytes);
 	}
 
 	public void setSamlAssertionSigningKeystore(String samlAssertionSigningKeystore) {
